--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
+    "detox": "19.3.1",
     "eslint": "^7.14.0",
+    "eslint-plugin-detox": "1.0.0",
     "jest": "^26.6.3",
+    "jest-circus": "^27.4.5",
     "metro-react-native-babel-preset": "^0.66.2",
+    "react-native-testing-library": "6.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
