--- a/package.json
+++ b/package.json
@@ -10,29 +10,37 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "6.0.6",
+    "@react-navigation/stack": "6.0.11",
     "react": "17.0.2",
-    "react-native": "0.66.4"
+    "react-native": "0.66.4",
+    "react-native-gesture-handler": "^2.1.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "3.10.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.66.4",
-    "@types/react-test-renderer": "^17.0.1",
-    "babel-jest": "^26.6.3",
+    "@babel/core": "7.12.9",
+    "@babel/plugin-proposal-decorators": "^7.16.5",
+    "@babel/runtime": "7.12.5",
+    "@react-native-community/eslint-config": "2.0.0",
+    "@types/jest": "26.0.23",
+    "@types/react-native": "0.66.4",
+    "@types/react-test-renderer": "17.0.1",
+    "babel-jest": "26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "detox": "19.3.1",
-    "eslint": "^7.14.0",
+    "eslint": "7.14.0",
     "eslint-plugin-detox": "1.0.0",
-    "jest": "^26.6.3",
-    "jest-circus": "^27.4.5",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "jest": "26.6.3",
+    "jest-circus": "27.4.5",
+    "metro-react-native-babel-preset": "0.66.2",
     "react-native-testing-library": "6.0.0",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4"
+    "typescript": "4.4.4"
   },
   "resolutions": {
-    "@types/react": "^17"
+    "@types/react": "17"
   },
   "jest": {
     "preset": "react-native",
