--- a/package.json
+++ b/package.json
@@ -14,12 +14,21 @@
     "@react-navigation/native": "6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "6.0.11",
+    "immutable": "^4.0.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.10.1",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.0.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-loop-symbol-ponyfill": "^2.2.2",
+    "redux-promise": "^0.6.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
