--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "immutable": "^4.0.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-fix-image": "^2.1.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "3.3.2",
